zz-out/pass14_run/zz-scripts/chapter09/generate_mcgt_raw_phase.err
  File "/home/jplal/MCGT/zz-scripts/chapter09/generate_mcgt_raw_phase.py", line 103
    help="Affiche un aperçu et n'écrit pas les fichiers")
                                                        ^
SyntaxError: unmatched ')'
